[package]
name = "oma-inquire"
version = "0.2.0"
description = "inquire is a library for building interactive prompts on terminals"
repository = "https://github.com/aosc-dev/inquire"
license = "MIT"
edition = "2018"
readme = "./CRATE_README.md"
documentation = "https://docs.rs/oma-inquire"
homepage = "https://github.com/aosc-dev/inquire"
authors = ["Mikael Mello <git@mikaelmello.com>"]
keywords = ["cli", "ask", "prompt", "question", "interactive"]
categories = ["command-line-interface", "value-formatting"]
include = ["/examples", "/src", "/../LICENSE"]

[lib]
name = "inquire"
path = "src/lib.rs"
doctest = true

[features]
default = ["macros", "crossterm"]
macros = []
date = ["chrono"]
editor = ["tempfile"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crossterm = { version = "0.28", optional = true }
termion = { version = "4.0", optional = true }
console = { version = "0.15", optional = true, features = ["windows-console-colors"] }

chrono = { version = "0.4", optional = true }

tempfile = { version = "3", optional = true }

thiserror = "2"
bitflags = "2"
dyn-clone = "1"
lazy_static = "1.4"
newline-converter = "0.3"

unicode-segmentation = "1"
unicode-width = "0.2"

